[gd_scene load_steps=14 format=3 uid="uid://ckkun5xjhksvs"]

[ext_resource type="Script" path="res://Enemies/movingSmallEnemyMelee/sm_testenemy.gd" id="1_gmdm7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e6mnk"]
albedo_color = Color(0, 0, 0.996078, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wwphn"]
material = SubResource("StandardMaterial3D_e6mnk")
size = Vector3(0.4, 0.1, 0.7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4wnt7"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_132x4"]
material = SubResource("StandardMaterial3D_4wnt7")
size = Vector3(0.4, 0.1, 0.7)

[sub_resource type="BoxShape3D" id="BoxShape3D_e0oye"]
size = Vector3(0.411011, 0.785034, 0.671875)

[sub_resource type="SphereShape3D" id="SphereShape3D_n71e6"]
radius = 10.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ggrtg"]
size = Vector3(1, 1, 1.51453)

[sub_resource type="Animation" id="Animation_25sqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperMesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.807625, 0.359617)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.610865, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LowerMesh:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.15, 0.45)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LowerMesh:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.698132, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LowerMesh:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 2.5)]
}

[sub_resource type="Animation" id="Animation_pxc0h"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, 0.6, 0), Vector3(0, 0.85859, 0.458975), Vector3(0.00193048, 0.424708, 0.629164), Vector3(0.00193048, 0.424708, 0.629164), Vector3(0, 0.6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 0.8, 1, 1.1, 1.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.523599, 0, 0), Vector3(-0.610865, 0, 0), Vector3(-0.558505, 0, 0), Vector3(-0.610865, 0, 0), Vector3(-0.558505, 0, 0), Vector3(-0.610865, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(-0.523599, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LowerMesh:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, 0.2, 0), Vector3(0, -0.15, 0.45), Vector3(0, 0.325027, 0.635152), Vector3(0, 0.325027, 0.635152), Vector3(0, 0.2, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LowerMesh:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 0.8, 1, 1.1, 1.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.523599, 0, 0), Vector3(0.698132, 0, 0), Vector3(0.663225, 0, 0), Vector3(0.698132, 0, 0), Vector3(0.663225, 0, 0), Vector3(0.698132, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0.523599, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UpperMesh:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 2.5), Vector3(1, 1, 2.5), Vector3(1, 1, 2.5), Vector3(1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LowerMesh:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 2.5), Vector3(1, 1, 2.5), Vector3(1, 1, 2.5), Vector3(1, 1, 1)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_wlabe"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperMesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperMesh:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.523599, 0, 0), Vector3(-0.436332, 0, 0), Vector3(-0.436332, 0, 0), Vector3(-0.523599, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LowerMesh:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.2, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LowerMesh:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.523599, 0, 0), Vector3(0.436332, 0, 0), Vector3(0.436332, 0, 0), Vector3(0.523599, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LowerMesh:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UpperMesh:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35yqk"]
_data = {
"RESET": SubResource("Animation_25sqb"),
"attack": SubResource("Animation_pxc0h"),
"idle": SubResource("Animation_wlabe")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_rp8pa"]
size = Vector3(0.508911, 1.79016, 1.85425)

[node name="SmTestenemy" type="CharacterBody3D"]
script = ExtResource("1_gmdm7")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="UpperMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 0.807625, 0.359617)
mesh = SubResource("BoxMesh_wwphn")

[node name="LowerMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.766044, -1.60697, 0, 0.642788, 1.91511, 0, -0.15, 0.45)
mesh = SubResource("BoxMesh_132x4")
skeleton = NodePath("../UpperMesh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0126343, 0.409674, 0.0224609)
shape = SubResource("BoxShape3D_e0oye")

[node name="PlayerDetectionArea" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_n71e6")

[node name="InitAttackArea" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InitAttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.527172, 0.257263)
shape = SubResource("BoxShape3D_ggrtg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_35yqk")
}
autoplay = "idle"

[node name="AttackHitbox" type="Area3D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00592041, 0.421082, 0.631714)
shape = SubResource("BoxShape3D_rp8pa")

[node name="LingeringHitboxTimer" type="Timer" parent="AttackHitbox"]
wait_time = 0.5

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="InitAttackArea" to="." method="_on_init_attack_area_body_entered"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="AttackHitbox/LingeringHitboxTimer" to="." method="_on_lingering_hitbox_timer_timeout"]
